--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "engines":{
+    "npm": "6.10.2",
+    "node": "10.16.0"
+  },
   "dependencies": {
     "@angular/animations": "^8.0.3",
     "@angular/cdk": "^8.1.2",
@@ -17,6 +21,7 @@
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
+    "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
