--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "engines":{
@@ -24,6 +25,8 @@
     "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.1",
     "@angular/router": "~8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
